--- a/MoonBookWeb/Views/Login/Update.cshtml
+++ b/MoonBookWeb/Views/Login/Update.cshtml
@@ -6,18 +6,18 @@
     Edit User
 </h1>
 <div>
-    <img src="/img/@user.PhotoName" style="border: 2px double black;  margin: 2%;  border-radius: 150px; width: 250px; height: 250px;"/>
+    <img src="/img/@user?.PhotoName" style="border: 2px double black;  margin: 2%;  border-radius: 150px; width: 250px; height: 250px;"/>
 </div>
 <form action="/Login/EditUser" method="post" enctype="multipart/form-data">
-   <p>Name:             <p/> <input type="text" name="Name" value="@user.Name" />
+   <p>Name:             <p/> <input type="text" name="Name" value="@user?.Name" />
        @if (!String.IsNullOrEmpty(err?[1])) @err[1]
-   <p>Surname:          <p/> <input type="text" name="Surname" value="@user.Surname" /> 
+   <p>Surname:          <p/> <input type="text" name="Surname" value="@user?.Surname" /> 
        @if (!String.IsNullOrEmpty(err?[2])) @err[2]
-   <p>Date of Bith:     <p/> <input type="date" name="DateOfBith" value="@user.DateOfBith.Date.ToString("u")"/>
+   <p>Date of Bith:     <p/> <input type="date" name="DateOfBith" value="@user?.DateOfBith.Date.ToString("u")"/>
        @if (!String.IsNullOrEmpty(err?[3])) @err[3]
-   <p>Login:            <p/> <input type="text" name="Login" value="@user.Login"/> 
+   <p>Login:            <p/> <input type="text" name="Login" value="@user?.Login"/> 
        @if (!String.IsNullOrEmpty(err?[4])) @err[4]
-   <p>Email:            <p/> <input type="email" name="Email" value="@user.Email"/> 
+   <p>Email:            <p/> <input type="email" name="Email" value="@user?.Email"/> 
        @if (!String.IsNullOrEmpty(err?[5])) @err[5]
    <p>Password:         <p/> <input type="password" name="Password" /> 
        @if (!String.IsNullOrEmpty(err?[6])) @err[6]
