--- a/MoonBookWeb/Views/Login/Update.cshtml
+++ b/MoonBookWeb/Views/Login/Update.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     var err = ViewData["err"] as String[];
-    var user = ViewData["user"] as User;
+    var user = ViewData["AuthUser"] as User;
 }
 <h1>
     Edit User
