--- a/MoonBookWeb/Views/Home/UserPage.cshtml
+++ b/MoonBookWeb/Views/Home/UserPage.cshtml
@@ -3,7 +3,7 @@
     var posts = ViewData["PostUser"] as IQueryable<Posts>;
 }
 
-<section style="background-color: brown; align-items:center; width: 100%; height: 800px; ">
+<section style="background-color:brown; align-items:center; width: 100%; height: 100%; ">
     <div style="margin: 2%; display: inline-block;">
         @if(!String.IsNullOrEmpty(user?.PhotoName))
         {
@@ -14,12 +14,12 @@
             <img src="/icons/android_contacts_FILL0_wght400_GRAD0_opsz48.png" style="border: 2px double black;  margin: 2%;  border-radius: 150px; width: 300px; height: 300px;">
         }
     </div>
-    <div style="margin: 1%; display: inline-block; vertical-align: top;">
+    <div style="width:70%; float:right; margin: 1%; display: inline-block; vertical-align: top;">
     <div style="display: block;">
       <h1 style=" margin-top: 5%;">@user?.Name @user?.Surname</h1>
     </div>
-       <div style="border: 2px double black; display: block; width: 610px; height: auto;">
-           <textarea id="Text" aria-disabled="false" spellcheck="true" autocomplete="on" autocorrect="on" autocapitalize="on" contenteditable="true" cols="4" wrap="soft" style="width: 600px; height: auto; border: 3px double gray; border-radius: 25px;"></textarea><br/>
+       <div style="border: 2px double black; display: block; width: 100%; margin-bottom: 20px; height: auto;">
+           <textarea id="Text" aria-disabled="false" spellcheck="true" autocomplete="on" autocorrect="on" autocapitalize="on" contenteditable="true" cols="4" wrap="soft" style="width: 100%; height: auto; border: 3px double gray; border-radius: 25px;"></textarea>
            <input type="file" id="ImagePost" accept="image/*" style="display: none;" multiple>
            <label for="ImagePost" style="margin-left: 75%;">
              <img src="/icons/image_FILL0_wght400_GRAD0_opsz48.png" style="width: 30px; height: 30px;"/>
@@ -28,56 +28,45 @@
                <img src="/icons/send_FILL0_wght400_GRAD0_opsz48.png" style="width: 30px; height: 30px; margin-right: 5%;"/>
            </button>
            <button type="button" id="Title" style="float: right; background-color: transparent; width: 30px; height: 30px; border-color: transparent; margin-right: 2%;">
-                    <img src="/icons/title_FILL0_wght400_GRAD0_opsz48.png" style="width: 30px; height: 30px; margin-right: 5%;"/>
+                <img src="/icons/title_FILL0_wght400_GRAD0_opsz48.png" style="width: 30px; height: 30px; margin-right: 5%;"/>
            </button>
        </div>
        <div>
-           @if(posts.Count() != 0)
-           {
-               @foreach (var post in posts)
-               {
-                  <div style="float: right; display: block; height: 100%; width: 100%; border: 2px double black;">
-                     <div style="width: 100%; height: 60px;">
-                        @if(String.IsNullOrEmpty(user?.PhotoName))
-                        {
-                             <img src="/icons/android_contacts_FILL0_wght400_GRAD0_opsz48.png" style="border: 2px double black;  margin: 1%;  border-radius: 150px; width: 35px; height: 35px;">
-                        }
-                        else
-                        {
-                             <img src="/img/@user.PhotoName" style="border: 2px double black;  margin: 1%; vertical-align:auto;  border-radius: 150px; width: 35px; height: 35px;">
-                        }
-                        <p style="display:inline-block; vertical-align: text-bottom;">
-                          <b>@user?.Name @user?.Surname</b>
-                        </p>
-                     </div>
-                     <div>
-                        <p style="display:block;font-size:25px;">
-                          <b>@post.Title</b>
-                        </p>
-                        <img src="/img_post/@post.Image" style="width:100%;"/>
-                        <p>@post.Text</p>
-                     </div>
-                     <div style="width:100%; height:60px;">
-                         <button style="float:right; background-color:transparent; width:30px; height:30px; border-color: transparent; margin-right:3%;">
-                           <img src="/icons/send_FILL0_wght400_GRAD0_opsz48.png" style="width:30px;height:30px;margin-right:5%;"/>
-                         </button>
-                         <textarea aria-disabled="false" spellcheck="true" autocomplete="on" autocorrect="on" autocapitalize="on" contenteditable="true" name="BlokMessege" cols="4" wrap="soft" style="width:600px;float:right;height:20px;border:3px double gray;border-radius:25px;"></textarea>
-                     </div> 
-                     <div style="width:100%; height:40px;">
-                         <num style="float:right;margin-top:1%;">@post.Dislike</num>
-                         <button style="float:right;background-color:transparent;width:30px;height:30px;border-color:transparent;margin-right:3%;">
-                             <img src="/icons/mood_bad_FILL0_wght400_GRAD0_opsz48.png" style="width:30px; height:30px; margin-right:5%;"/>
-                         </button>
-                         <num style="float:right;margin-top:1%;">@post.Like</num>
-                         <button style="float:right;background-color:transparent;width:30px;height:30px;border-color:transparent; margin-right:3%;">
-                           <img src="/icons/mood_FILL0_wght400_GRAD0_opsz48.png" style="width:30px;height:30px;margin-right:5%;"/>
-                          </button>
-                     </div>
-                  </div>
-               }
-              
-           }
-              
-       </div>
+       @if(posts.Count() != 0){
+         @foreach (var post in posts){
+           <div style="float: right; display: block; margin-bottom: 20px; height: 100%; width: 100%; border: 2px double black;">
+               <div style="width: 100%; height: 60px;">
+                   @if(String.IsNullOrEmpty(user?.PhotoName))
+                   { 
+                       <img src="/icons/android_contacts_FILL0_wght400_GRAD0_opsz48.png" style="border: 2px double black;  margin: 1%;  border-radius: 150px; width: 35px; height: 35px;"> 
+                   } else
+                   { 
+                       <img src="/img/@user.PhotoName" style="border: 2px double black; vertical-align:top; margin: 1%; border-radius: 150px; width: 35px; height: 35px;"> 
+                   }
+                   <p style="display:inline-block; vertical-align: middle;"><b>@user?.Name @user?.Surname</b></p>
+                   </div>
+                   <div>
+                       <p style="display:block;font-size:25px;"><b>@post.Title</b></p>
+                       <img src="/img_post/@post.Image" style="width:100%;"/><p>@post.Text</p>
+                       </div>
+                       <div style="width:100%; height:60px;">
+                           <button style="float:right; background-color:transparent; width:30px; height:30px; border-color: transparent; margin-right:3%;">
+                               <img src="/icons/send_FILL0_wght400_GRAD0_opsz48.png" style="width:30px;height:30px;margin-right:5%;"/>
+                               </button>
+                               <textarea aria-disabled="false" spellcheck="true" autocomplete="on" autocorrect="on" autocapitalize="on" contenteditable="true" name="BlokMessege" cols="4" wrap="soft" style="width:90%;float:left;height:35px;border:3px double gray;border-radius:25px;"></textarea>
+                           </div>
+                           <div style="width:100%; height:40px;">
+                               <num style="float:right;margin-top:1%;">@post.Dislike</num>
+                               <button style="float:right;background-color:transparent;width:30px;height:30px;border-color:transparent;margin-right:3%;">
+                                   <img src="/icons/mood_bad_FILL0_wght400_GRAD0_opsz48.png" style="width:30px; height:30px; margin-right:5%;"/>
+                                   </button>
+                                   <num style="float:right;margin-top:1%;">@post.Like</num>
+                                   <button style="float:right;background-color:transparent;width:30px;height:30px;border-color:transparent; margin-right:3%;">
+                                       <img src="/icons/mood_FILL0_wght400_GRAD0_opsz48.png" style="width:30px;height:30px;margin-right:5%;"/>
+                                       </button>
+                                       </div>
+                                       </div>
+         }
+       }</div>
     </div>
   </section>
