--- a/MoonBookWeb/Views/User/Index.cshtml
+++ b/MoonBookWeb/Views/User/Index.cshtml
@@ -1,41 +1,41 @@
 ﻿@{
     var user = ViewData["AuthUser"] as User;
-    var posts = ViewData["PostUser"] as IQueryable<Posts>;
 }
 
-<section style="background-color:brown; align-items:center; width: 100%; height: 100%; ">
-    <div style="margin: 2%; display: inline-block;">
+<section id="UserPage">
+    <div id="UserAvatar">
         @if(!String.IsNullOrEmpty(user?.PhotoName))
         {
-            <img src="/img/@user.PhotoName" style="border: 2px double black;  margin: 2%;  border-radius: 150px; width: 300px; height: 300px;"/>
+            <img id="UserPhoto" src="/img/@user.PhotoName"/>
         }
         else
         {
-            <img src="/icons/android_contacts_FILL0_wght400_GRAD0_opsz48.png" style="border: 2px double black;  margin: 2%;  border-radius: 150px; width: 300px; height: 300px;">
+            <img id="UserPhoto" src="/icons/android_contacts_FILL0_wght400_GRAD0_opsz48.png">
         }
     </div>
-    <div style="width:70%; float:right; margin: 1%; display: inline-block; vertical-align: top;">
-    <div style="display: block;">
-      <h1 style=" margin-top: 5%;">@user?.Name @user?.Surname</h1>
+    <div id="UserInformations">
+    <div id="UserName">
+      <h1 id="UName">@user?.Name @user?.Surname</h1>
     </div>
-       <div style="border: 2px double black; display: block; width: 100%; margin-bottom: 20px; height: auto;">
-           <textarea id="Text" aria-disabled="false" spellcheck="true" autocomplete="on" autocorrect="on" autocapitalize="on" contenteditable="true" cols="4" wrap="soft" style="width: 100%; height: auto; border: 3px double gray; border-radius: 25px;"></textarea>
-           <input type="file" id="ImagePost" accept="image/*" style="display: none;" multiple>
-           <label for="ImagePost" style="margin-left: 75%;">
+       <div id="SendPost">
+           <textarea id="Text" aria-disabled="false" spellcheck="true" autocomplete="on" autocorrect="on" autocapitalize="on" contenteditable="true" cols="4" wrap="soft"></textarea>
+           <input type="file" id="ImagePost" accept="image/*" multiple>
+           <label for="ImagePost" style="margin-left: 80%;">
              <img src="/icons/image_FILL0_wght400_GRAD0_opsz48.png" style="width: 30px; height: 30px;"/>
            </label>
-           <button id="Post" style="float: right; background-color: transparent; width: 30px; height: 30px; border-color: transparent; margin-right: 5%;">
-               <img src="/icons/send_FILL0_wght400_GRAD0_opsz48.png" style="width: 30px; height: 30px; margin-right: 5%;"/>
+           <button id="Post">
+               <img src="/icons/send_FILL0_wght400_GRAD0_opsz48.png"/>
            </button>
-           <button type="button" id="Title" style="float: right; background-color: transparent; width: 30px; height: 30px; border-color: transparent; margin-right: 2%;">
-                <img src="/icons/title_FILL0_wght400_GRAD0_opsz48.png" style="width: 30px; height: 30px; margin-right: 5%;"/>
+           <button type="button" id="Title">
+                <img src="/icons/title_FILL0_wght400_GRAD0_opsz48.png"/>
            </button>
        </div>
-       <div>
+       <post id="post"></post>
+       @*<div>
        @if(posts?.Count() != 0){
-         @foreach (var post in posts){
-            <div style="float: right; display: block; margin-bottom: 20px; height: 100%; width: 100%; border: 2px double black;">
-                <div style="width: 100%; height: 60px;">
+          @foreach (var post in posts){
+             <div id="PostUser">
+                <div id="PostInfo" >
                     @if(String.IsNullOrEmpty(user?.PhotoName))
                     { 
                         <img src="/icons/android_contacts_FILL0_wght400_GRAD0_opsz48.png" style="border: 2px double black;  margin: 1%;  border-radius: 150px; width: 35px; height: 35px;"> 
@@ -43,31 +43,31 @@
                     { 
                         <img src="/img/@user.PhotoName" style="border: 2px double black; vertical-align:top; margin: 1%; border-radius: 150px; width: 35px; height: 35px;"> 
                     }
-                    <p style="display:inline-block; vertical-align: middle;">
+                    <p id="PostUserName">
                         <b>@user?.Name @user?.Surname</b><br/>
-                            <i style="font-size: 8pt;">@post.Date</i></p>
+                            <i>@post.Date</i></p>
                 </div>
                 <div>
-                    <p style="display:block;font-size:25px;"><b>@post.Title</b></p>
-                    <img src="/img_post/@post.Image" style="width:100%;"/><p>@post.Text</p>
+                    <p id="PostTitle" ><b>@post.Title</b></p>
+                    <img id="PostImg" src="/img_post/@post.Image"/><p>@post.Text</p>
                 </div>
-                <div style="width:100%; height:60px;">
-                       <button style="float:right; background-color:transparent; width:30px; height:30px; border-color: transparent; margin-right:3%;">
-                           <img src="/icons/send_FILL0_wght400_GRAD0_opsz48.png" style="width:30px;height:30px;margin-right:5%;"/>
-                           </button>
-                           <textarea aria-disabled="false" spellcheck="true" autocomplete="on" autocorrect="on" autocapitalize="on" contenteditable="true" name="BlokMessege" cols="4" wrap="soft" style="width:90%;float:left;height:35px;border:3px double gray;border-radius:25px;"></textarea>
+                <div id="PostComment">
+                     <button>
+                         <img src="/icons/send_FILL0_wght400_GRAD0_opsz48.png"/>
+                     </button>
+                     <textarea aria-disabled="false" spellcheck="true" autocomplete="on" autocorrect="on" autocapitalize="on" contenteditable="true" name="BlokMessege" cols="4" wrap="soft"></textarea>
                 </div>
-                <div style="width:100%; height:40px;">
-                    <num id="@post.Id.ToString()_DisLike" style="float:right;margin-top:1%;">@post.Dislike</num>
-                    <button id="@post.Id.ToString()_Sad" style="float:right;background-color:transparent;width:30px;height:30px;border-color:transparent;margin-right:3%;">
-                        <img src="/icons/mood_bad_FILL0_wght400_GRAD0_opsz48.png" style="width:30px; height:30px; margin-right:5%;"/>
+                <div id="PostReactions">
+                    <num id="@post.Id.ToString()_DisLike">@post.Dislike</num>
+                    <button id="@post.Id.ToString()_Sad">
+                        <img src="/icons/mood_bad_FILL0_wght400_GRAD0_opsz48.png"/>
                     </button>
-                        <num id="@post.Id.ToString()_Like" style="float:right;margin-top:1%;">@post.Like</num>
-                    <button id="@post.Id.ToString()_Smail" style="float:right;background-color:transparent;width:30px;height:30px;border-color:transparent; margin-right:3%;">
-                        <img src="/icons/mood_FILL0_wght400_GRAD0_opsz48.png" style="width:30px;height:30px;margin-right:5%;"/>
+                        <num id="@post.Id.ToString()_Like" >@post.Like</num>
+                    <button id="@post.Id.ToString()_Smail">
+                        <img src="/icons/mood_FILL0_wght400_GRAD0_opsz48.png"/>
                     </button>
                 </div>
-            </div>
+             </div>
              <script>
                  var sad = document.getElementById("@post.Id.ToString()_Sad");
                  var smaile = document.getElementById("@post.Id.ToString()_Smail");
@@ -78,13 +78,13 @@
                      const formData = new FormData();
 	                 formData.append("Reaction", 1);
 	                 formData.append("IdPost", "@post.Id");
-            
+             
                      fetch("/api/post", {
                          method: "PUT",
                          body: formData
                      }).then(r => r.json()).then(j => {
 		                   if (j.status == "Error") {
-			                   alert(j.message)
+		  	                  alert(j.message)
 		                   } else {
                                @post.Date.ToString("TyyyyMMddHHmmssfffffff")like.textContent = j.reactLike;
                                @post.Date.ToString("TyyyyMMddHHmmssfffffff")dislike.textContent = j.reactDislike;
@@ -101,7 +101,7 @@
                          body: formData
                      }).then(r => r.json()).then(j => {
 		                   if (j.status == "Error") {
-			                   alert(j.message)
+		  	                  alert(j.message)
 		                   } else {
                                @post.Date.ToString("TyyyyMMddHHmmssfffffff")dislike.textContent = j.reactDislike;
                                @post.Date.ToString("TyyyyMMddHHmmssfffffff")like.textContent = j.reactLike;
@@ -109,7 +109,8 @@
                      })
                  })
              </script>
-         }
-       }</div>
+          }
+       }</div>*@
     </div>
  </section>
+ <script src="/js/post.js"></script>
