--- a/MoonBookWeb/wwwroot/css/site.css
+++ b/MoonBookWeb/wwwroot/css/site.css
@@ -28,15 +28,27 @@ body {
     font-size: 10pt;
 }
 .UserMenu a {
-    display: block; /* Ссылка как блочный элемент */
-    padding: 5px; /* Поля вокруг надписи */
-    text-decoration: none; /* Подчеркивание у ссылок убираем */
-    color: #666; /* Цвет текста */
-    border: 1px solid #ccc; /* Рамка вокруг пунктов меню */
-    background-color: #f0f0f0; /* Цвет фона */
+    display: block; 
+    padding: 5px; 
+    text-decoration: none; 
+    color: #666; 
+    border: 1px solid #ccc;
+    background-color: #f0f0f0; 
     border-bottom: none;
 }
-rName:hover {
+#search_user_text{
+    height: 25px;
+}
+#search_user {
+    background-color: transparent;
+    width: 30px;
+    border-color: transparent;
+    margin-right: 2%;
+    height: 25px;
+    align-items:center;
+    justify-content:center;
+}
+#Name:hover {
     cursor: pointer;
 }
 #UserImg:hover {
@@ -51,3 +63,138 @@ rName:hover {
     display: block;
     cursor: pointer;
 }
+/*=================== User ===============*/
+#UserPage {
+    background-color: rebeccapurple;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: flex-start;
+}
+#UserPhoto {
+    border: 2px double black;
+    margin: 2%;
+    border-radius: 150px;
+    width: 300px;
+    height: 300px;
+}
+#UserAvatar {
+    margin: 2%;
+    display: inline-block;
+}
+#UserInformations {
+    width: 70%;
+    float: right;
+    margin: 1%;
+    display: inline-block;
+    vertical-align: top;
+}
+#UserName {
+    display: block;
+}
+#UName {
+    margin-top: 5%;
+}
+#SendPost {
+    border: 2px double black;
+    display: block;
+    width: 100%;
+    margin-bottom: 20px;
+    height: auto;
+}
+#Text {
+    width: 100%;
+    height: auto;
+    border: 3px double gray;
+    border-radius: 25px;
+}
+#ImagePost {
+    display: none;
+}
+#SendPost button {
+    float: right;
+    background-color: transparent;
+    width: 30px;
+    height: 30px;
+    border-color: transparent;
+    margin-right: 5%;
+}
+#SendPost button img {
+    width: 30px;
+    height: 30px;
+    margin-right: 2%;
+}
+/*=================== Post ===============*/
+#PostInfo {
+    width: 100%;
+    height: 60px;
+}
+#PostUserPhoto {
+    border: 2px double black;
+    vertical-align: top;
+    margin: 1%;
+    border-radius: 150px;
+    width: 35px;
+    height: 35px;
+}
+#PostUserName {
+    display: inline-block;
+    vertical-align: middle;
+}
+#PostUserName i {
+    font-size: 8pt;
+}
+#PostTitle {
+    display: block;
+    font-size: 25px;
+}
+#PostImg {
+    width: 100%;
+}
+#PostComment {
+    width: 100%;
+    height: 60px;
+}
+#PostComment textarea {
+    width: 90%;
+    float: left;
+    height: 35px;
+    border: 3px double gray;
+    border-radius: 25px;
+}
+#PostComment button {
+    float: right;
+    background-color: transparent;
+    width: 30px;
+    height: 30px;
+    border-color: transparent;
+    margin-right: 3%;
+}
+#PostComment button img {
+    width: 30px;
+    height: 30px;
+    margin-right: 5%;
+}
+#PostReactions {
+    width: 100%;
+    height: 40px;
+}
+    #PostReactions button {
+        float: right;
+        background-color: transparent;
+        width: 30px;
+        height: 30px;
+        border-color: transparent;
+        margin-right: 3%;
+    }
+        #PostReactions button img {
+            width: 30px;
+            height: 30px;
+            margin-right: 5%;
+        }
+    #PostReactions num {
+        float: right;
+        margin-top: 1%;
+        margin-right: 1%;
+    }
