--- a/MoonBookWeb/wwwroot/css/site.css
+++ b/MoonBookWeb/wwwroot/css/site.css
@@ -126,6 +126,14 @@ body {
     margin-right: 2%;
 }
 /*=================== Post ===============*/
+.Post {
+    float: right;
+    display: block;
+    margin-bottom: 20px;
+    height: 100%;
+    width: 100%;
+    border: 2px double black;
+}
 #PostInfo {
     width: 100%;
     height: 60px;
@@ -187,6 +195,7 @@ body {
         height: 30px;
         border-color: transparent;
         margin-right: 3%;
+        display: flex;
     }
         #PostReactions button img {
             width: 30px;
@@ -197,4 +206,54 @@ body {
         float: right;
         margin-top: 1%;
         margin-right: 1%;
+    }
+/*=================== Freand ===============*/
+#FreandPage {
+    align-items: center;
+    width: auto;
+    height: auto;
+}
+#Freand {
+    margin: 1%;
+    display: flex;
+    height: 800px;
+    width: 250px;
+    border: 2px double black;
+}
+#FreandList {
+    display: inline;
+}
+#TitleFreand {
+    margin: 1%;
+    background-color: brown;
+    width: 250px;
+    height: 25px
+}
+.idFreand {
+    display:flex;
+    width: 100%;
+    height: 45px;
+    border: 1px double black;
+}
+#FreandPhoto {
+    border: 2px double black;
+    vertical-align: top;
+    margin: 1%;
+    border-radius: 150px;
+    width: 35px;
+    height: 35px;
+}
+#FreandName {
+    display: inline-block;
+    vertical-align: middle;
+}
+#AddFreand {
+    background-color: transparent;
+    width: 25px;
+    height: 25px;
+    border-color: transparent;
+}
+    #AddFreand img {
+        width: 25px;
+        height: 25px;
     }
