--- a/MoonBookWeb/Views/User/FreandPage.cshtml
+++ b/MoonBookWeb/Views/User/FreandPage.cshtml
@@ -6,8 +6,8 @@
 
         </freands>
     </div>
-    <div style="display: inline; background-color:purple">
+    <post id="post">
 
-    </div>
+    </post>
 </section>
  <script src="/js/freands.js"></script>
