--- a/MoonBookWeb/wwwroot/css/site.css
+++ b/MoonBookWeb/wwwroot/css/site.css
@@ -215,7 +215,7 @@ body {
 }
 #Freand {
     margin: 1%;
-    display: flex;
+    display: block;
     height: 800px;
     width: 250px;
     border: 2px double black;
