--- a/MoonBookWeb/Views/User/FreandPage.cshtml
+++ b/MoonBookWeb/Views/User/FreandPage.cshtml
@@ -6,7 +6,7 @@
 
         </freands>
     </div>
-    <post id="post">
+    <post id="post" style="width: 100%; margin: 5%; display: block;">
 
     </post>
 </section>
