--- a/MoonBookWeb/wwwroot/css/site.css
+++ b/MoonBookWeb/wwwroot/css/site.css
@@ -209,9 +209,9 @@ body {
     }
 /*=================== Freand ===============*/
 #FreandPage {
-    align-items: center;
     width: auto;
     height: auto;
+    display: flex;
 }
 #Freand {
     margin: 1%;
@@ -249,8 +249,6 @@ body {
 }
 #AddFreand {
     background-color: transparent;
-    width: 25px;
-    height: 25px;
     border-color: transparent;
 }
     #AddFreand img {
