--- a/MoonBookWeb/Views/User/Index.cshtml
+++ b/MoonBookWeb/Views/User/Index.cshtml
@@ -12,6 +12,11 @@
         {
             <img id="UserPhoto" src="/icons/android_contacts_FILL0_wght400_GRAD0_opsz48.png">
         }
+        <p>@user?.Status</p>
+        <p id="TitleFreand"><b>Online Freands</b></p>
+        <div id="OnlineFreands">
+
+        </div>
     </div>
     <div id="UserInformations">
     <div id="UserName">
