--- a/MoonBookWeb/Views/Shared/_Layout.cshtml
+++ b/MoonBookWeb/Views/Shared/_Layout.cshtml
@@ -55,6 +55,8 @@
                                     </li>
                                     <li>
                                         <a class="link-with-icon" asp-area="" asp-controller="User" asp-action="FreandPage">My Freands</a>
+                                    </li>                               <li>
+                                        <a class="link-with-icon" asp-area="" asp-controller="Books" asp-action="Index">Add Book</a>
                                     </li>
                                     <li>
                                         <a class="link-with-icon" asp-area="" asp-controller="Login" asp-action="Update">Change data</a>
