--- a/MoonBookWeb/Views/User/Index.cshtml
+++ b/MoonBookWeb/Views/User/Index.cshtml
@@ -14,9 +14,7 @@
         }
         <p>@user?.Status</p>
         <p id="TitleFreand"><b>Online Freands</b></p>
-        <div id="OnlineFreands">
-
-        </div>
+        <online id="OnlineFreands"></online>
     </div>
     <div id="UserInformations">
     <div id="UserName">
@@ -39,3 +37,4 @@
     </div>
  </section>
  <script src="/js/post.js"></script>
+ <script src="~/js/user.js"></script>
