--- a/MoonBookWeb/Views/Home/Library.cshtml
+++ b/MoonBookWeb/Views/Home/Library.cshtml
@@ -1,3 +1,4 @@
-﻿<h1>Library</h1>
+﻿<library id="Library">
 
-<p>Use this page to detail your site's privacy policy.</p>
+</library>
+<script src="/js/library.js"></script>
