--- a/MoonBookWeb/Views/Home/Index.cshtml
+++ b/MoonBookWeb/Views/Home/Index.cshtml
@@ -1,6 +1,4 @@
-﻿<section id="UserPage">
-    <post id="post">
-
-    </post>
+﻿<section id="BlogPage">
+    <post id="post"> </post>
 </section>
-
+<script src="/js/home.js"></script>
