--- a/MoonBookWeb/Views/User/FreandPage.cshtml
+++ b/MoonBookWeb/Views/User/FreandPage.cshtml
@@ -1,5 +1,4 @@
-﻿
-<section id="FreandPage">
+﻿<section id="FreandPage">
     <div id="FreandList">
         <p id="TitleFreand"><b>Freands</b></p>
         <freands id="Freand">
