--- a/MoonBookWeb/Views/Shared/_Layout.cshtml
+++ b/MoonBookWeb/Views/Shared/_Layout.cshtml
@@ -52,7 +52,10 @@
                                     </li>
                                     <li>
                                         <a class="link-with-icon" asp-area="" asp-controller="User" asp-action="FreandPage">My Freands</a>
-                                    </li>                               
+                                    </li>
+                                    <li>
+                                        <a class="link-with-icon" asp-area="" asp-controller="Books" asp-action="UserLibrary">My Library</a>
+                                    </li>
                                     <li>
                                         <a class="link-with-icon" asp-area="" asp-controller="Books" asp-action="Index">Add Book</a>
                                     </li>
