--- a/MoonBookWeb/wwwroot/css/site.css
+++ b/MoonBookWeb/wwwroot/css/site.css
@@ -9,7 +9,9 @@ body {
     font-size: 16px;
   }
 }
-
+body p {
+    color: black;
+}
 html {
   position: relative;
   min-height: 100%;
@@ -134,6 +136,7 @@ body {
     display: block;
 }
 #UName {
+    color:black;
     margin-top: 5%;
 }
 #SendPost {
@@ -184,11 +187,14 @@ body {
     width: 100%;
     border: 2px double black;
 }
+#PostText {
+    color: black;
+}
 #PostDelete {
     float: right;
     width: 17px;
     margin: 5px;
-    cursor:pointer;
+    cursor: pointer;
 }
 #PostInfo {
     width: 100%;
@@ -203,13 +209,16 @@ body {
     height: 35px;
 }
 #PostUserName {
+    color: black;
     display: inline-block;
     vertical-align: middle;
 }
-#PostUserName i {
-    font-size: 8pt;
-}
+    #PostUserName i {
+        color: black;
+        font-size: 8pt;
+    }
 #PostTitle {
+    color: black;
     display: block;
     font-size: 25px;
 }
@@ -271,9 +280,9 @@ body {
     width: 300px;
     height: 300px;
 }
-#FreandPageNeme{
+#FreandPageNeme {
+    color: black;
     font-size: 26pt;
-
 }
 #FreandPageInfo {
     display: grid;
@@ -314,6 +323,7 @@ body {
     height: 35px;
 }
 #FreandName {
+    color: black;
     display: inline-block;
     vertical-align: middle;
 }
@@ -345,11 +355,13 @@ body {
     height: 35px;
 }
 #CommentInfo {
+    color: black;
     font-size: 10pt;
 }
-#CommentInfo p {
-    margin: 0;
-}
+    #CommentInfo p {
+        color: black;
+        margin: 0;
+    }
 /*=================== Books ===============*/
 #Library {
     display: flex;
@@ -364,13 +376,24 @@ body {
     height: 250px;
 }
 #Author {
+    color: black;
     display: flex;
     justify-content: center;
 }
 #Title {
+    color: black;
     display: flex;
     justify-content: center;
     font-weight: bold;
     font-size: 14pt;
     margin: 0;
+}
+/*=================== Blog ===============*/
+#BlogPage {
+    background-color: #313574;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
 }
