--- a/MoonBookWeb/wwwroot/css/site.css
+++ b/MoonBookWeb/wwwroot/css/site.css
@@ -362,7 +362,7 @@ body {
         color: black;
         margin: 0;
     }
-/*=================== Books ===============*/
+/*=================== Library ===============*/
 #Library {
     display: flex;
     flex-wrap: wrap;
@@ -371,7 +371,10 @@ body {
     margin: 2%;
     width: 150px
 }
-#CoverName{
+#Genry{
+    margin-right: 1%;
+}
+#CoverName {
     width: 150px;
     height: 250px;
 }
@@ -387,6 +390,18 @@ body {
     font-weight: bold;
     font-size: 14pt;
     margin: 0;
+}
+#SearchAllBook {
+    height: 25px;
+}
+#SearchBook {
+    background-color: transparent;
+    width: 30px;
+    border-color: transparent;
+    margin-right: 2%;
+    height: 25px;
+    align-items: center;
+    justify-content: center;
 }
 /*=================== Blog ===============*/
 #BlogPage {
