--- a/MoonBookWeb/Views/Books/UserLibrary.cshtml
+++ b/MoonBookWeb/Views/Books/UserLibrary.cshtml
@@ -1,1 +1,20 @@
-﻿<h1>User Library</h1>
+﻿<div>
+    <div id="UserLibrary">
+        <div>
+            <p id="TitleBook"><b>My Books</b></p>
+            <book id="UserBook">
+
+            </book>
+        </div>
+        <div>
+            <p id="TitleBook"><b>My Library</b></p>
+            <book id="UserLibrary">
+
+            </book>
+        </div>
+    </div>
+    <div>
+
+    </div>
+</div>
+<script src="/js/userlibrary.js"></script>
