--- a/MoonBookWeb/Views/Books/UserLibrary.cshtml
+++ b/MoonBookWeb/Views/Books/UserLibrary.cshtml
@@ -1,4 +1,4 @@
-﻿<div>
+﻿<div style="display: flex;">
     <div id="UserLibrary">
         <div>
             <p id="TitleBook"><b>My Books</b></p>
@@ -13,7 +13,7 @@
             </book>
         </div>
     </div>
-    <div>
+    <div id ="TextContent" style="margin-left: 3%;">
 
     </div>
 </div>
