--- a/MoonBookWeb/Views/Shared/_Layout.cshtml
+++ b/MoonBookWeb/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
     var user = ViewData["AuthUser"] as User;
     var freands = ViewData["Freands"] as String;
     var library = ViewData["Library"] as String;
+    var userlibrary = ViewData["UserLibrary"] as String;
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -41,43 +42,48 @@
                         <label for="AlpBook" style="margin-right: 1%">Alphabet</label>
                         <input id="DateBook" value="Date" type="checkbox">
                         <label for="DateBook" style="margin-right: 1%" >Date</label>
-
-                            <select id="Genry">
-                                <option selected="selected">Choose Genry</option>
-                                <option value="Prose">Prose</option>
-                                <option value="Poetry">Poetry</option>
-                                <option value="Lyrics">Lyrics</option>
-                                <option value="Memoirs">Memoirs</option>
-                                <option value="History">History</option>
-                                <option value="Detective">Detective</option>
-                                <option value="Adventures">Adventures</option>
-                                <option value="Fantasy">Fantasy</option>
-                                <option value="Cyberpunk">Cyberpunk</option>
-                                <option value="Publicism">Publicism</option>
-                                <option value="Events">Events</option>
-                                <option value="Review">Review</option>
-                                <option value="Criticism">Criticism</option>
-                                <option value="Philosophy">Philosophy</option>
-                                <option value="Religion">Religion</option>
-                                <option value="Esoterics">Esoterics</option>
-                                <option value="Occultism">Occultism</option>
-                                <option value="Mystic">Mystic</option>
-                                <option value="Horror">Horror</option>
-                                <option value="Politics">Politics</option>
-                                <option value="Erotica">Erotica</option>
-                                <option value="Love story">Love story</option>
-                                <option value="Natural science">Natural science</option>
-                                <option value="Humor">Humor</option>
-                                <option value="Parodies">Parodies</option>
-                                <option value="Translations">Translations</option>
-                                <option value="Fairy tales">Fairy tales</option>
-                                <option value="Dramaturgy">Dramaturgy</option>
-                                <option value="Postmodernism">Postmodernism</option>
-                                <option value="Metamodernism">Metamodernism</option>
-                            </select>
+                        <select id="Genry">
+                            <option selected="selected">Choose Genry</option>
+                            <option value="Prose">Prose</option>
+                            <option value="Poetry">Poetry</option>
+                            <option value="Lyrics">Lyrics</option>
+                            <option value="Memoirs">Memoirs</option>
+                            <option value="History">History</option>
+                            <option value="Detective">Detective</option>
+                            <option value="Adventures">Adventures</option>
+                            <option value="Fantasy">Fantasy</option>
+                            <option value="Cyberpunk">Cyberpunk</option>
+                            <option value="Publicism">Publicism</option>
+                            <option value="Events">Events</option>
+                            <option value="Review">Review</option>
+                            <option value="Criticism">Criticism</option>
+                            <option value="Philosophy">Philosophy</option>
+                            <option value="Religion">Religion</option>
+                            <option value="Esoterics">Esoterics</option>
+                            <option value="Occultism">Occultism</option>
+                            <option value="Mystic">Mystic</option>
+                            <option value="Horror">Horror</option>
+                            <option value="Politics">Politics</option>
+                            <option value="Erotica">Erotica</option>
+                            <option value="Love story">Love story</option>
+                            <option value="Natural science">Natural science</option>
+                            <option value="Humor">Humor</option>
+                            <option value="Parodies">Parodies</option>
+                            <option value="Translations">Translations</option>
+                            <option value="Fairy tales">Fairy tales</option>
+                            <option value="Dramaturgy">Dramaturgy</option>
+                            <option value="Postmodernism">Postmodernism</option>
+                            <option value="Metamodernism">Metamodernism</option>
+                        </select>
                         <input id="SearchAllBook" type="text">
                         <button id="SearchBook">
                             <img src="/icons/search_FILL0_wght400_GRAD0_opsz48.png" style=" display: flex; justify-content: center; width: 20px; height: 20px; margin-right: 5%;"/>
+                        </button>
+                    }
+                    @if(userlibrary == "Ok")
+                    {
+                        <button id="AddBookLibrary" hidden>
+                            <img id="AddBookLibraryImg"/>
                         </button>
                     }
                     @if(user == null)
