--- a/MoonBookWeb/Views/User/Index.cshtml
+++ b/MoonBookWeb/Views/User/Index.cshtml
@@ -25,16 +25,16 @@
         </books>
         <div id="SendPost">
             <textarea id="Text" aria-disabled="false" spellcheck="true" autocomplete="on" autocorrect="on" autocapitalize="on" contenteditable="true" cols="4" wrap="soft"></textarea>
-            <input type="file" id="ImagePost" accept="image/*" multiple>
-            <label for="ImagePost" style="margin-left: 80%;">
-              <img src="/icons/image_FILL0_wght400_GRAD0_opsz48.png" style="  width: 30px; height: 30px;"/>
-            </label>
             <button id="Post">
                 <img src="/icons/send_FILL0_wght400_GRAD0_opsz48.png"/>
             </button>
             <button type="button" id="Title">
                  <img src="/icons/title_FILL0_wght400_GRAD0_opsz48.png"/>
             </button>
+            <input type="file" id="ImagePost" accept="image/*" multiple>
+            <label for="ImagePost" id="ImagePostFile">
+                <img src="/icons/image_FILL0_wght400_GRAD0_opsz48.png"/>
+            </label>
         </div>
         <post id="post"></post>
     </div>
