--- a/MoonBookWeb/wwwroot/css/site.css
+++ b/MoonBookWeb/wwwroot/css/site.css
@@ -90,6 +90,15 @@ body {
     display: flex;
     align-items: flex-start;
 }
+#ImagePostFile {
+    float: right;
+    margin-right: 1%;
+    margin-top: -0.4%;
+}
+    #ImagePostFile img {
+        width: 30px;
+        height: 30px;
+    }
 #UserBooks {
     border: 2px double black;
     display: inline-flex;
@@ -141,7 +150,7 @@ body {
 }
 #SendPost {
     border: 2px double black;
-    display: block;
+    display: flow-root;
     width: 100%;
     margin-bottom: 20px;
     height: auto;
@@ -315,7 +324,8 @@ body {
     height: 25px
 }
 .idFreand {
-    display:flex;
+    cursor: pointer;
+    display: flex;
     width: 100%;
     height: 45px;
     border: 1px double black;
@@ -374,6 +384,7 @@ body {
     flex-wrap: wrap;
 }
 .Books {
+    cursor: pointer;
     margin: 2%;
     width: 150px
 }
@@ -419,6 +430,17 @@ body {
     justify-content: center;
 }
 /*=================== User Library===============*/
+#UserBook {
+    max-height: 215px;
+    overflow: overlay;
+}
+#AddBookLibrary {
+    background-color: transparent;
+    border: none;
+}
+    #AddBookLibrary img {
+        width: 30px;
+    }
 #TitleBook {
     margin: 1%;
     background-color: brown;
@@ -432,11 +454,23 @@ body {
     border: 2px double black;
 }
 .BookItem {
+    cursor:pointer;
+    margin-top: 1%;
     height: 75px;
     align-items: center;
     border: 2px double black;
     display: flex;
 }
-.BookItem img{
-    width: 50px;
+    .BookItem img {
+        width: 45px;
+    }
+#TextContent {
+    background-color: antiquewhite;
+    width: 100%;
+    color: black;
+    white-space: pre-line;
+}
+#TextContent p{
+    text-indent: 20px;
+    margin: 2%;
 }
