--- a/MoonBookWeb/Views/Books/UserLibrary.cshtml
+++ b/MoonBookWeb/Views/Books/UserLibrary.cshtml
@@ -8,7 +8,7 @@
         </div>
         <div>
             <p id="TitleBook"><b>My Library</b></p>
-            <book id="UserLibrary">
+            <book id="LibraryUser">
 
             </book>
         </div>
