--- a/MoonBookWeb/wwwroot/css/site.css
+++ b/MoonBookWeb/wwwroot/css/site.css
@@ -474,3 +474,29 @@ body {
     text-indent: 20px;
     margin: 2%;
 }
+#RadioButtonGroup {
+    display: inline-block;
+    overflow: hidden;
+}
+#RadioButton {
+    display: inline-block;
+    float: left;
+}
+#RadioButtonGroup input[type=radio] {
+    display: none;
+}
+#RadioButtonGroup {
+    display: flex;
+    
+    padding: 0px 15px;
+    line-height: 34px;
+    border-right: none;
+    user-select: none;
+}
+#RadioButtonGroup img {
+    cursor: pointer;
+    width: 25px;
+}
+#RadioButtonGroup input[type=radio]:checked + label {
+    border: 1px double black;
+}
